ProdIND/ProdPrograms/force-app/main/default/objects/BE_Master__c/BE_Master__c.object-meta.xml
<CustomObject>
    <description>This object is to store the master data for a BE.</description>
    <label>BE Master</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BE Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>