ProdIND/ProdPrograms/force-app/main/default/objects/BE_Master__c/fields/BL_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_Code__c</fullName>
    <label>BL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>