ProdIND/ProdPrograms/force-app/main/default/objects/BE_Master__c/fields/PinCode_Last2DigitRemoved__c.field-meta.xml
<CustomField>
    <fullName>PinCode_Last2DigitRemoved__c</fullName>
    <description>This formula field will store pincode by removing 2 last digit</description>
    <formula>IF(ISPICKVAL(Product_Type__c, &apos;Tractor&apos;), FLOOR(Pin_Code__c/100) ,0)</formula>
    <label>PinCode_Last2DigitRemoved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>