ProdIND/ProdPrograms/force-app/main/default/objects/BE_Master__c/fields/PinCode_LastDigitRemoved__c.field-meta.xml
<CustomField>
    <fullName>PinCode_LastDigitRemoved__c</fullName>
    <description>This formula field will store pincode by removing one last digit</description>
    <formula>IF(ISPICKVAL(Product_Type__c, &apos;Tractor&apos;), FLOOR(Pin_Code__c/10) ,0)</formula>
    <label>PinCode_LastDigitRemoved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>